# docs/swagger.json
@@ -10,6 +10,130 @@
     "host": "{{.Host}}",
     "basePath": "{{.BasePath}}",
     "paths": {
+        "/v1/classic/detail/{type}/{id}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Classic"
+                ],
+                "summary": "获取期刊详情",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "x-auth-token",
+                        "name": "x-auth-token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Type",
+                        "name": "type",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "[{\"id\": 1,\"image\": \"images/music.7.png\",\"content\": \"无人问我粥可温 风雨不见江湖人\", \"title\": \"月之门《枫华谷的枫林》\",\"fav_nums\": 145,\"type\": 200,\"url\": \"http://music.163.com/song/media/outer/url?id=393926.mp3\"}]",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/service.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/classic/favor/{type}/{id}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Classic"
+                ],
+                "summary": "用户是否喜欢一个期刊",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "x-auth-token",
+                        "name": "x-auth-token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Type",
+                        "name": "type",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "[{\"id\": 1,\"image\": \"images/music.7.png\",\"content\": \"无人问我粥可温 风雨不见江湖人\", \"title\": \"月之门《枫华谷的枫林》\",\"fav_nums\": 145,\"type\": 200,\"url\": \"http://music.163.com/song/media/outer/url?id=393926.mp3\"}]",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/service.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/classic/favors": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Classic"
+                ],
+                "summary": "获取用户喜欢的期刊",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "x-auth-token",
+                        "name": "x-auth-token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"content\": \"人生不能像做菜，把所有的料准备好才下锅\",\"favnums\": 0,\"id\": 7,\"image\": \"images/movie.8.png\",\"index\": 8,\"like_status\": true,\"pubdate\": \"2019-04-05T17:12:04+08:00\",\"title\": \"李安《饮食男女 》\",\"type\": 100}",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/service.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/classic/latest": {
             "get": {
                 "consumes": [
@@ -34,6 +158,168 @@
                 "responses": {
                     "200": {
                         "description": "{\"content\": \"人生不能像做菜，把所有的料准备好才下锅\",\"favnums\": 0,\"id\": 7,\"image\": \"images/movie.8.png\",\"index\": 8,\"like_status\": true,\"pubdate\": \"2019-04-05T17:12:04+08:00\",\"title\": \"李安《饮食男女 》\",\"type\": 100}",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/service.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/classic/next/{id}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Classic"
+                ],
+                "summary": "获取当前期刊的下一个期刊",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "x-auth-token",
+                        "name": "x-auth-token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{}",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/service.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/classic/previous/{id}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Classic"
+                ],
+                "summary": "获取当前期刊的上一个期刊",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "x-auth-token",
+                        "name": "x-auth-token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{}",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/service.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/like/": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Like"
+                ],
+                "summary": "期刊点赞",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "x-auth-token",
+                        "name": "x-auth-token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "likeParam",
+                        "name": "likeParam",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/model.ParamFavorReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{}",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/service.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/like/cancel": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Like"
+                ],
+                "summary": "期刊取消点赞",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "x-auth-token",
+                        "name": "x-auth-token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "likeParam",
+                        "name": "likeParam",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/model.ParamFavorReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{}",
                         "schema": {
                             "type": "object",
                             "$ref": "#/definitions/service.Response"
@@ -111,6 +397,38 @@
                     }
                 }
             }
+        },
+        "/v1/user/token/verify": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "验证Token合法性",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "x-auth-token",
+                        "name": "x-auth-token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/service.Response"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -122,6 +440,21 @@
                 },
                 "nickname": {
                     "type": "string"
+                }
+            }
+        },
+        "model.ParamFavorReq": {
+            "type": "object",
+            "required": [
+                "id",
+                "type"
+            ],
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "type": {
+                    "type": "integer"
                 }
             }
         },
