# server/router.go
@@ -2,13 +2,14 @@ package server
 
 import (
 	"net/http"
-	_ "jiyue.im/docs" // docs is generated by Swag CLI, you have to import it.
+
 	"github.com/gin-gonic/gin"
+	ginSwagger "github.com/swaggo/gin-swagger"
+	"github.com/swaggo/gin-swagger/swaggerFiles"
+	_ "jiyue.im/docs" // docs is generated by Swag CLI, you have to import it.
 	"jiyue.im/pkg/auth"
 	"jiyue.im/server/middleware"
 	"jiyue.im/service"
-	"github.com/swaggo/gin-swagger"
-	"github.com/swaggo/gin-swagger/swaggerFiles"
 )
 
 func LoadRouter(mw ...gin.HandlerFunc) *gin.Engine {
@@ -35,14 +36,25 @@ func LoadRouter(mw ...gin.HandlerFunc) *gin.Engine {
 	{
 		u.POST("/register", service.UserRegister)
 		u.POST("/token", service.GetToken)
+		u.POST("/token/verify", middleware.AuthMiddleware(auth.USER), service.VerifyToken)
 	}
-
-	g.POST("/v1/token/verify", middleware.AuthMiddleware(auth.USER), service.VerifyToken)
 
 	classic := g.Group("/v1/classic")
 	classic.Use(middleware.AuthMiddleware(auth.USER))
 	{
 		classic.GET("/latest", service.GetLatest)
+		classic.GET("/next/:id", service.ClassicNext)
+		classic.GET("/previous/:id", service.ClassicPrevious)
+		classic.GET("/favor/:type/:id", service.ClassicFavor)
+		classic.GET("/favors", service.ClassicFavors)
+		classic.GET("/detail/:type/:id", service.ClassicDetail)
+	}
+
+	like := g.Group("/v1/like")
+	like.Use(middleware.AuthMiddleware(auth.USER))
+	{
+		like.POST("/", service.Like)
+		like.POST("/cancel", service.DisLike)
 	}
 
 	return g
